# Image-Captioning

./: .gitignore  README.md  download.py  extract_features.py  lstm_from_features.ipynb  main.py  process_dataset.py  pyproject.toml  requirements.txt  train.py  unique.p  utility.py
image_captioning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: image_captioning.ipynb
runs/src/: dataset.py  inference.py  model.py  preprocessing.py
src/: __init__.py  dataset.py  inference.py  model.py  preprocessing.py
